# wasix-axum

./: Cargo.toml  README.md  wasix-axum.wasm  wasmer.toml
src/: main.rs
